sandbox/output
NumberParserTest.java:11: error: constructor NumberParser in class NumberParser cannot be applied to given types;
        NumberParser parser = new NumberParser(spliter);
                              ^
  required: no arguments
  found: Spliter
  reason: actual and formal argument lists differ in length
NumberParserTest.java:16: error: cannot find symbol
        varify(spliter).setDelimiter(",");
        ^
  symbol:   method varify(Spliter)
  location: class NumberParserTest
NumberParserTest.java:17: error: cannot find symbol
        varify(spliter).split("");
        ^
  symbol:   method varify(Spliter)
  location: class NumberParserTest
3 errors
